# simple-url-shortener

./: LICENSE  README.md  main.py  pyproject.toml
templates/: index.html
